--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <html>      
   <head>
     <title> About Me </title>
-    <link rel= "stylesheet" href="stylesheet2.css">
+    <link rel= "stylesheet" href="stylesheets.css">
   </head>     
        
   <body>
