--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
       
       <div class = "navbar">
         <a href = "https://www.youtube.com"> Youtube </a>
-        <a href = "skribbl.io"> Skribbl </a>
+        <a href = "https://skribbl.io"> Skribbl </a>
         <a href = "https://corgi912.github.io/portfolio/page2.html"> New Page </a>
       </div>  
     
