--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,7 @@
       <h1 class= "bigheading"> About Me </h1>
       
       <div class = "navbar">
+        <a href = "https://corgi912.github.io/portfolio/aboutme2.html"> Home </a>
         <a href = "https://www.youtube.com"> Youtube </a>
         <a href = "https://skribbl.io"> Skribbl </a>
         <a href = "https://corgi912.github.io/portfolio/page2.html"> New Page </a>
