--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
     </div>
     
     <div>
-      <h2> class- "food"> Food </h2>
+      <h2 class= "food"> Food </h2>
       <ul>
        <li> Tacos </li>
        <li> Boba </li>
