--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title> Page 2 </title>
-    <link rel = "stylesheet2.css">
+    <link rel = "stylesheet.css">
   </head>
   
   <body>
