--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,6 @@
         <li> They keep their owners company. </li>
         <li> They teach their owners responsibility and empathy. </li>
     </div>
-      
       img src="https://github.com/corgi912/portfolio/blob/master/Golden%20retriever%20puppy.jpg?raw=true"
   
     <div>
@@ -41,6 +40,7 @@
         <li> They keep the house rodent-free. </li>
         <li> Petting the cat can reduce stress. </li>
     </div>
+      img src="https://github.com/corgi912/portfolio/blob/master/Cats.jpg?raw=true"
     
     <div>
       <h2 class= "Hamsters"> Hamsters </h2>
