--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
         <li> They teach their owners responsibility and empathy. </li>
     </div>
       
-      <img src="https://github.com/corgi912/portfolio/blob/master/Golden%20retriever%20puppy.jpg?raw=true"
+      <img src="https://github.com/corgi912/portfolio/blob/master/Golden%20retriever%20puppy.jpg?raw=true" height="30" width="50"
   
     <div>
       <h2 class= "Cats"> Cats </h2>
