--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
        
   <body>
     <div>
-      <h1 class= "bigheading"> About Me </h1>
+      <h1 class= "bigheading"> Types of Pets </h1>
       
       <div class = "navbar">
         <a href = "https://corgi912.github.io/portfolio/aboutme.html"> Home </a>
