--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@
         <li> Petting the cat can reduce stress. </li>
     </div>
       
-      <img src="https://github.com/corgi912/portfolio/blob/master/catto.jpg?raw=true"
+      <img src="https://github.com/corgi912/portfolio/blob/master/catto.jpg?raw=true" height="300" width="400"
     
     <div>
       <h2 class= "Hamsters"> Hamsters </h2>
