--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
     <title> Page 2 </title>
     <meta charset = "utf-8">
     <meta name="viewport" content="width=device-width, initial-scal=1">
-    <link rel = "stylesheet.css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn538
+    <link rel = "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn538
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK2UENzmM7KCkRr/rE9/Qpg6aAZGJw           
     
     <style>
