--- a/page2.html
+++ b/page2.html
@@ -103,16 +103,17 @@
      <!-- Slideshow -->
     <div class = "carousel-inner">
       <di class = "carousel-item active">
-        <img src = "https://github.com/corgi912/portfolio/blob/master/petto.jpg?raw=true" alt="A dog and a cat"
+        <img src = "https://github.com/corgi912/portfolio/blob/master/petto.jpg?raw=true" alt="A dog and a cat" height="300" width="500"
+            
       </div>
       <div class = "carousel-item">
-        <img src = "https://github.com/corgi912/portfolio/blob/master/watermelon.jpg?raw=true" alt="Snacktime for the Guinea Pigs"
+        <img src = "https://github.com/corgi912/portfolio/blob/master/watermelon.jpg?raw=true" alt="Snacktime for the Guinea Pigs" height="300" width="500"
       </div>
       <div class = "carousel-item">
-        <img src = "https://github.com/corgi912/portfolio/blob/master/cats%20and%20dogs.jpg?raw=true" alt="Best Friends Furr-ever"
+        <img src = "https://github.com/corgi912/portfolio/blob/master/cats%20and%20dogs.jpg?raw=true" alt="Best Friends Furr-ever" height="300" width="500"
       </div>
       <div class = "carousel-item">
-        <img src = "https://github.com/corgi912/portfolio/blob/master/for%20pets.jpg?raw=true" alt="Different types of Pets"
+        <img src = "https://github.com/corgi912/portfolio/blob/master/for%20pets.jpg?raw=true" alt="Different types of Pets" height="300" width="500"
       </div>
     </div>
         
