--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
       
       <div class = "navbar">
         <a href = "https://corgi912.github.io/portfolio/aboutme.html"> Home </a>
-        <a href = "link rel="stylesheet.css" href="" crossorigin="anonymous">"> Youtube </a>
+        <a href = "https://corgi912.github.io/portfolio/page2.html"> Pictures/Cons </a>
         <a href = "https://www.adoptapet.com"> Adopt a Pet </a>
         <a href = "https://www.hssv.org/adopt/"> Silicon Valley Adopting </a>
       </div>  
